--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
-networkx
-graphviz
-tqdm
-sentence-transformers
-scikit-learn
-torch
-numpy
-matplotlib
-scipy
-simpleneighbors
-pandas
 plotly
 umap-learn
-openai
+pandas
+tqdm
 tenacity
+simpleneighbors
+scikit-learn
+graphviz
+numpy
+openai
+hydra-core
+nltk
+networkx
+omegaconf
+scipy
+torch
+matplotlib
+accelerate
 transformers
+datasets
+huggingface_hub
+flake8
+wandb
+frozendict
+pytest
+sentence-transformers
